[package]
name = "tide-testing"
version = "0.1.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "tide testing helper"
readme = "README.md"
repository = "https://github.com/jbr/tide-testing"
documentation = "https://docs.rs/tide-testing"
license = "MIT OR Apache-2.0"
keywords = ["tide", "surf", "http", "request", "testing"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
tide = { version = "0.16.0", default-features = false }
surf = { version = "2.1.0", default-features = false }

[dev-dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
